# OpenCV_SSD_MobileNet

./: .gitignore  CMakeLists.txt  README.md
model/: models.yml
src/: Graphic.cpp  Graphic.h  MessageQueue.h  SSDModel.cpp  SSDModel.h  main.cpp
